<resources>
    <string name="app_name">Ej1Grd</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="LoginFailed">Incorrect user/pass. Login Failed!</string>
    <string name="title_activity_db_info">DbInfo</string>
    <string name="pList">Player List</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Code">Code:</string>
    <string name="Name">Name:</string>
    <string name="Price">Price:</string>
    <string name="Position">Position:</string>
    <string name="Points">Points:</string>
    <string name="infoAdded">Info added successfully</string>
    <string name="infoNotAdded">Info could not be saved</string>
    <string name="noData">There´s no available data</string>
    <string name="playerpos">PlayerPos</string>
    <string name="playername">PlayerName</string>
    <string name="playerprice">PlayerPrice</string>
    <string name="playerpoints">PlayerPoints</string>
    <string name="availablePl">"Available players: "</string>
    <string name="nPlayers">"nPlayers"</string>
    <string name="newPlayerImagePlus">"newPlayerImagePlus"</string>

</resources>