<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addInfo">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="407dp"
        android:layout_height="372dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <TableRow
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="413dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.099">

        <!--Duplicated margins to support newer APIs-->
        <Button
            android:id="@+id/accept"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="110dp"
            android:layout_height="65dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/Accept" />
        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="110dp"
            android:layout_height="65dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/Cancel" />

        <Button
            android:id="@+id/delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="110dp"
            android:layout_height="65dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/Delete" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>